--- a/css/main.css
+++ b/css/main.css
@@ -47,16 +47,29 @@ nav .nav-right-section .menu-icon {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+    background-color: white;
     width: 22px;
     height: 22px;
     margin-left: 15px;
     cursor: pointer;
+    border: 8px solid white;
+    border-radius: 50%;
+}
+
+nav .nav-right-section .menu-icon:hover {
+    background-color: #f2f2f2;
+    border: 8px solid #f2f2f2;
 }
 
 nav .nav-right-section img {
     border-radius: 50%;
     margin-left: 22px;
     margin-top: 4px;
+    border: 5px solid white;
+}
+
+nav .nav-right-section img:hover {
+    border: 5px solid #f2f2f2;
 }
 
 
